force-app/main/default/objects/Regression_Config__mdt/Regression_Config__mdt.object-meta.xml
<CustomObject>
    <label>Regression Config</label>
    <pluralLabel>Regression Configs</pluralLabel>
</CustomObject>