force-app/main/default/objects/Regression_Config__mdt/fields/Auto_Ticket_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Ticket_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Ticket Enabled</label>
    <type>Checkbox</type>
</CustomField>