force-app/main/default/objects/Regression_Config__mdt/fields/Coverage_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Threshold__c</fullName>
    <description>Minimum code coverage percentage (default 85)</description>
    <label>Coverage Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>