force-app/main/default/objects/Regression_Config__mdt/fields/Enabled_Layers__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Layers__c</fullName>
    <description>Semicolon-delimited layer numbers (e.g. 1;2;3;4)</description>
    <label>Enabled Layers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>