force-app/main/default/objects/Regression_Config__mdt/fields/Flaky_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Flaky_Threshold__c</fullName>
    <description>Number of consecutive failures before flagging as flaky (default 3)</description>
    <label>Flaky Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>