force-app/main/default/objects/Regression_Config__mdt/fields/Notification_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Notification_Recipients__c</fullName>
    <label>Notification Recipients</label>
    <description>Semicolon-delimited list of email addresses to receive test run notifications.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>