force-app/main/default/objects/Regression_Config__mdt/fields/Notification_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Notification_Trigger__c</fullName>
    <label>Notification Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Failures Only</fullName>
            </value>
            <value>
                <fullName>Regressions Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>