force-app/main/default/objects/Regression_Config__mdt/fields/Org_Alias__c.field-meta.xml
<CustomField>
    <fullName>Org_Alias__c</fullName>
    <description>Target org alias for test execution</description>
    <label>Org Alias</label>
    <length>100</length>
    <type>Text</type>
</CustomField>