force-app/main/default/objects/Regression_Config__mdt/fields/Schedule_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Frequency__c</fullName>
    <label>Schedule Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>