force-app/main/default/objects/Regression_Config__mdt/fields/Source_Path__c.field-meta.xml
<CustomField>
    <fullName>Source_Path__c</fullName>
    <description>Path to source directory for the product being tested</description>
    <label>Source Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>