force-app/main/default/objects/Regression_Config__mdt/fields/Ticket_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Project_Id__c</fullName>
    <description>Project ID in external ticket system</description>
    <label>Ticket Project ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>