force-app/main/default/objects/Regression_Config__mdt/fields/Ticket_System_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Ticket_System_Named_Credential__c</fullName>
    <description>Named Credential for external ticketing</description>
    <label>Ticket System Named Credential</label>
    <length>100</length>
    <type>Text</type>
</CustomField>